new section added

--- a/doc/notes.tex
+++ b/doc/notes.tex
@@ -28,7 +28,7 @@
 
 
 % JS style listings
-% \input{includes/js-style-listings}
+\input{js-style-listings}
 
 \title{Js Advanced concepts}
 \author{Andrei Neagoie}
@@ -54,4 +54,5 @@
     \listoffigures 
 
     \printbibliography[ title = {Resorces} ]
+    
 \end{document}
